
20111211
    - (Jerome) Performance improvements.

20111028
    - (Jerome) Fixed a drag and drop bug when spanning multiple periods
      in vertical mode.
    - (Jerome) Fixed a size problem when drawing the hours in vertical
      mode.

20110812
    - (Jerome) Respect the font size

20110323
    - (Jerome) Allow user to change dates and times by
      drag and drop, and "resizing" the schedules.

20110210
    - (Jerome) Use user-set background and text color

20110129
    - (Jerome) Add configurable schedule font size

20110103
    - (Jerome) Avoid calling OnSize twice per second and hogging the CPU.

20100228
    - (Jerome) Add get/set to set whether we should draw the 'Now' line.
      If so, automatically refresh every minute.

20101226
    - (Jerome) Always highlight current day

    - (Jerome) Add a green line to show current time

20101123
    - (Jerome) Fixed another memory leak.

20101120
    - (Jerome) Fixed a memory leak in wxSchedulerCore.Delete.

20101113
    - (Jerome) Setting the column width to the minimum in horizontal
      monthly view and switching to weekly would hang.

20101105
    - (Jerome) Tasks starting and ending at 00:00:00 the same day
    would not be displayed correctly.

20101015
    - (Jerome) One can change the minimum width of days in horizontal
      mode, as if it was a list header.

20101014
    - (Jerome) The month name in horizontal monthly view does not depend
      on the current horinzontal scroll value.

20101006
    - (Jerome) Method to choose the colour of the current day

v1.3.1:
20100808
    - (Jerome) One can now display several periods at once (except
      for months)

20100807
    - (Jerome) Bigger default widths

20100728
    - (Jerome) Fix preview size for weekly and monthly printouts. Fix
      printout in horizontal mode.

    - (Jerome) Printer setup dialog

    - (Jerome) Finished fixing print. Support for multiple pages in
      horizontal mode.

v1.3.0: